fixed logo more on mobile

--- a/css/custom/home.scss
+++ b/css/custom/home.scss
@@ -298,6 +298,7 @@ button.btn.btn-primary.btn-light {
 
 .yeoLogo h1 {
       font-size: 72px;
+      letter-spacing: -3px;
 }
 
 .yeoLogo h2 {
